bitfields/tests/compile_error_cases/bitfield_field_type_too_small_for_bits.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    #[bits(6)]
    a: u16,
    #[bits(10)]
    b: u8,
}

fn main() {}
